curr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2025-06-09T15:29:28Z"
  generation: 1
  labels:
    llm-d.ai/epp: granite-base-model-epp
  name: granite-base-model-epp
  namespace: e2e-solution
  ownerReferences:
  - apiVersion: llm-d.ai/v1alpha1
    kind: ModelService
    name: granite-base-model
    uid: 1d05a267-5613-4c6b-aab3-1033d8af8836
  resourceVersion: "318199359"
  uid: ed7a8fea-eb81-4aeb-9b06-0f0e2d5e49d2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      llm-d.ai/epp: granite-base-model-epp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        llm-d.ai/epp: granite-base-model-epp
    spec:
      containers:
      - args:
        - -poolName
        - granite-base-model-inference-pool
        - -poolNamespace
        - e2e-solution
        - serverless-workstream
        - -v
        - "4"
        - --zap-encoder
        - json
        - -grpcPort
        - "9002"
        - -grpcHealthPort
        - "9003"
        image: ghcr.io/llm-d/llm-d-inference-scheduler:v0.1.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          grpc:
            port: 9003
            service: envoy.service.ext_proc.v3.ExternalProcessor
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: epp
        ports:
        - containerPort: 9002
          protocol: TCP
        - containerPort: 9003
          protocol: TCP
        - containerPort: 9090
          name: metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          grpc:
            port: 9003
            service: envoy.service.ext_proc.v3.ExternalProcessor
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: granite-base-model-epp-sa
      serviceAccountName: granite-base-model-epp-sa
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-06-09T15:29:39Z"
    lastUpdateTime: "2025-06-09T15:29:39Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-06-09T15:29:28Z"
    lastUpdateTime: "2025-06-09T15:29:39Z"
    message: ReplicaSet "granite-base-model-epp-7c9f8df9cb" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
