istio.yaml
# apiVersion: gateway.networking.k8s.io/v1
# kind: Gateway
# metadata:
#   name: inference-gateway-istio
# spec:
#   gatewayClassName: istio
#   listeners:
#   - name: http
#     port: 80
#     protocol: HTTP

# --- 
# apiVersion: gateway.kgateway.dev/v1alpha1
# kind: GatewayParameters
# metadata:
#   name: inference-gateway-kgateway-params
# spec:
#   kube:
#     service:
#       type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: inference-gateway-kgateway
spec:
  gatewayClassName: kgateway
  infrastructure:
    parametersRef:
      group: gateway.kgateway.dev
      kind: GatewayParameters
      name: inference-gateway-params
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    name: http
    port: 80
    protocol: HTTP
